# advent-of-code

./: .bazelrc  .gitignore  MODULE.bazel  README.md  bazel-advent-of-code  bazel-bin  bazel-out  bazel-testlogs  maven_install.json  pom.xml  rules_jvm_external++maven+maven_install.json
2015/day01/: pom.xml
2015/day02/: pom.xml
2015/day03/: pom.xml
2015/day04/: pom.xml
2015/day05/: pom.xml
2019/day01/src/: part2.rs
2019/day02/src/: main.rs
2019/day03/src/: part2.rs
2019/day04/src/: part1.rs
2019/day05/src/: part1.rs
2019/day08/src/: part2.rs
2019/day09/: Cargo.toml
2019/day09/src/: part2.rs
2019/day10/src/: part1.rs  part2.rs
2019/day11/src/: part1.rs  part2.rs
2019/day12/: Cargo.toml
2019/day12/src/: main.rs  part1.rs
2020/06_go/: main.go
2020/07_javascript/: main.js
2020/11_ruby/: main.rb
2020/14_php/: main.php
2020/16_scala/: main$package.tasty  main.scala
2020/day03_kotlin/: main.kt
2020/day05/: input.txt  main.pl
2020/day08_typescript/: main.js  main.ts
2020/day1/: main.py
2020/day10_haskell/: main.hs
2020/day2/: main.java
2020/day3/: main.kt
2020/day4/: input.txt  main.c
2022/01/: part1.py
2022/02/: part1.py
2022/10/: part2.py
2022/day03/: part1.py
2022/day04/: part1.py
2022/day06/: part1.py
2022/day07/: part2.py
2022/day1/: part2.py
2022/day10/: part1.py
2022/day2/: part2.py
2022/day3/: part2.py
2022/day4/: part2.py
2022/day5/: part1.py  part2.py
2022/day6/: part2.py
2022/day7/: part1.py
2022/day8/: part1.py  part2.py
2022/day9/: part2.py
2023/06/: part1.py
2023/07/: part2.py
2023/10/: part1.py
2023/11/: main.py
2023/21/: main.py
2023/day03/: part1.py
2023/day07/: part1.py
2023/day08/: part2.py
2023/day11/: main.py
2023/day12/: main.py
2023/day13/: main.py
2023/day14/: alt.py
2023/day15/: main.py
2023/day16/: main.py
2023/day18/: main.py
2023/day19/: main.py
2023/day2/: part1.py
2023/day20/: part2.py
2023/day21/: main.py
2023/day22/: main.py
2023/day23/: main.py
2023/day24/: main.py
2023/day5/: part1.py
2023/day8/: part1.py
2024/day01/src/: part1.rs  part2.rs
2024/day02/: Main.java  Part1.java  Part2.java
2024/day03/: Main.java  Part1.java  Part2.java
2024/day04/: Main.java  Part1.java  Part2.java
2024/day05/: Main.java  Part1.java  Part2.java
2024/day06/: Direction.java  Main.java  Part1.java  Part2.java
2024/day07/: Main.java
2024/day08/: pom.xml
2024/day09/: pom.xml
2024/day10/: pom.xml
2024/day11/: pom.xml
2024/day12/: pom.xml
2024/day13/: pom.xml
2024/day14/: pom.xml
2024/day15/: pom.xml
2024/day16/: pom.xml
2024/day17/: pom.xml
2024/day18/: pom.xml
2024/day19/: pom.xml
2024/day20/: pom.xml
2024/day21/: pom.xml
2024/day22/: pom.xml
2024/day23/: pom.xml
2024/day24/: pom.xml
2024/day25/: pom.xml
assets/: splitter.py
core/: BUILD.bazel  Utils.java
day2/: part2.py
day3/: part1.py  part2.py
day4/: part2.py
day5/: part1.py  part2.py
day6/: part2.py
day7/: part2.py  test_part1.py
day9/: part1.py  part2.py
libraries/java/: BUILD.bazel
libraries/java/src/main/java/me/vainio/aoc/cache/: AocCache.java
libraries/java/src/main/java/me/vainio/aoc/util/: Direction.java  Grid.java  Location.java
libraries/java/src/test/java/me/vainio/aoc/cache/: AocCacheTest.java
libraries/java/src/test/java/me/vainio/aoc/util/: DirectionTest.java  GridTest.java
main/: BUILD.bazel  Main.java
old/: README.md
old/2015/day11/: Solver.java
old/2015/day12/: Solver.java
old/2015/day14/: Solver.java
old/2015/day15/: Solver.java
old/2015/day21/: Solver.java
old/2015/day22/: Boss.java  Effect.java  Player.java  Solver.java  State.java
old/2015/day23/: Solver.java
old/2015/day24/: Solver.java
old/2015/day25/: Solver.java
old/2015/day3/: Solver.java
old/2015/day9/: Solver.java
old/2020/02_java/: Main.java
old/2020/05_prolog/: main.pl
old/2020/08_typescript/: package-lock.json
old/2020/09_cpp/: main.cpp
old/2020/11_ruby/: main.rb
old/2020/12_rust/: main.rs
old/2020/13_csharp/: Program.cs
old/2020/15_perl/: main.pl
old/2020/16_scala/: main.tasty
old/2022/09/: part1.py
old/2023/01/: part1.py
old/2023/05/: part2.py
old/2023/12/: main.py
old/2023/14/: main.py
old/2023/17/: main.py
old/2023/19/: main.py
old/2023/20/: part1.py
old/2023/25/: main.py
solutions/2024/01/: BUILD.bazel
solutions/2024/02/: BUILD.bazel
solutions/2024/03/: BUILD.bazel
solutions/2024/04/: BUILD.bazel
solutions/2024/05/: BUILD.bazel
solutions/2024/06/: BUILD.bazel
solutions/2024/07/: BUILD.bazel
solutions/2024/08/: BUILD.bazel
solutions/2024/09/: BUILD.bazel
solutions/2024/10/: BUILD.bazel
solutions/2024/11/: BUILD.bazel
solutions/2024/12/: BUILD.bazel
solutions/2024/13/: BUILD.bazel
solutions/2024/14/: BUILD.bazel
solutions/2024/15/: BUILD.bazel
solutions/2024/16/: BUILD.bazel
solutions/2024/17/: BUILD.bazel
solutions/2024/18/: BUILD.bazel
solutions/2024/19/: BUILD.bazel
solutions/2024/20/: BUILD.bazel
solutions/2024/21/: BUILD.bazel
solutions/2024/22/: BUILD.bazel
solutions/day1/: problem_2.py
solutions/day10/: out.txt  part1.py  part2.py
solutions/day3/: part2.py
solutions/day4/: part1.py
tools/aoc-client/: BUILD.bazel
tools/aoc-client/src/main/java/me/vainio/aoc/client/: AocClient.java  AocConfig.java  ArgsParser.java  CLI.java  Cli.java  Main.java
tools/aoc-client/src/test/java/me/vainio/aoc/client/: AocClientTest.java  CLITest.java  CliTest.java
tools/format/: BUILD.bazel  format.sh
tools/generate/: BUILD.bazel  generate.sh  generate_java.sh
tools/java/: BUILD.bazel  defs.bzl  deps.bzl  macros.bzl
tools/runner/: BUILD.bazel  run.sh
years/2024/01/: BUILD.bazel
years/2024/01/src/main/java/lvainio/year2024/day01/: Main.java  Solver.java
years/2024/01/src/main/java/me/vainio/year2024/day01/: Solver.java
years/2024/01/src/test/java/lvainio/year2024/day01/: SolverTest.java
years/2024/01/src/test/java/me/vainio/year2024/day01/: Solver2Test.java  Solver3Test.java  SolverTest.java
(+289 files in other folders)
