"""My Advent of Code solutions."""

module(
    name = "advent-of-code",
    version = "1.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_shell", version = "0.3.0")
bazel_dep(name = "rules_java", version = "8.14.0")
bazel_dep(name = "rules_jvm_external", version = "6.8")
bazel_dep(name = "contrib_rules_jvm", version = "0.30.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

JUNIT_JUPITER_VERSION = "5.13.4"

JUNIT_PLATFORM_VERSION = "1.13.4"

MOCKITO_VERSION = "5.8.0"

maven.install(
    artifacts = [
        "org.junit.platform:junit-platform-launcher:%s" % JUNIT_PLATFORM_VERSION,
        "org.junit.platform:junit-platform-reporting:%s" % JUNIT_PLATFORM_VERSION,
        "org.junit.jupiter:junit-jupiter-api:%s" % JUNIT_JUPITER_VERSION,
        "org.junit.jupiter:junit-jupiter-params:%s" % JUNIT_JUPITER_VERSION,
        "org.junit.jupiter:junit-jupiter-engine:%s" % JUNIT_JUPITER_VERSION,
        "org.mockito:mockito-core:%s" % MOCKITO_VERSION,
        "org.mockito:mockito-junit-jupiter:%s" % MOCKITO_VERSION,
        "info.picocli:picocli:4.7.6",
        "com.google.googlejavaformat:google-java-format:1.32.0:all-deps",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
