load("@contrib_rules_jvm//java:defs.bzl", "java_test_suite")
load("@rules_java//java:defs.bzl", "java_library")
load("//tools/java:deps.bzl", "JUNIT5_DEPS")

java_library(
    name = "commons",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
)

java_test_suite(
    name = "tests",
    srcs = glob(["src/test/java/**/*Test.java"]),
    runner = "junit5",
    deps = [
        ":commons",
    ] + JUNIT5_DEPS,
)
