load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@rules_java//java:java_binary.bzl", "java_binary")

java_binary(
    name = "google-java-format",
    srcs = [],
    jvm_flags = [
        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
    ],
    main_class = "com.google.googlejavaformat.java.Main",
    runtime_deps = [
        "@maven//:com_google_googlejavaformat_google_java_format_all_deps",
    ],
)

buildifier(
    name = "buildifier-check",
    exclude_patterns = [
        "./.git/*",
        "./.idea/*",
        "./bazel-*",
        "./.bazelbsp/*",
    ],
    lint_mode = "warn",
    mode = "diff",
)

buildifier(
    name = "buildifier-fix",
    exclude_patterns = [
        "./.git/*",
        "./.idea/*",
        "./bazel-*",
        "./.bazelbsp/*",
    ],
    lint_mode = "fix",
    mode = "fix",
)
