load("@contrib_rules_jvm//docs:stardoc-input.bzl", "java_junit5_test")

java_library(
    name = "solver_library",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
)

java_binary(
    name = "Solver",
    main_class = "lvainio.year2024.day01.Solver",
    runtime_deps = [":solver_library"],
)

java_junit5_test(
    name = "SolverTest",
    test_class = "lvainio.year2024.day01.SolverTest",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        ":solver_library",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_params",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting",
    ],
