load("@contrib_rules_jvm//java:defs.bzl", "java_test_suite")
load("@rules_java//java:defs.bzl", "java_binary", "java_library")
load("//tools/java:deps.bzl", "JUNIT5_DEPS")

java_library(
    name = "solver_library",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
)

java_binary(
    name = "solver",
    main_class = "me.vainio.year2024.day01.Solver",
    runtime_deps = [":solver_library"],
)

java_test_suite(
    name = "all_tests",
    srcs = glob(["src/test/java/**/*Test.java"]),
    runner = "junit5",
    deps = [
        ":solver_library",
    ] + JUNIT5_DEPS,
)
